completed basic rendering for all contents

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: wp UIkit starter
+Theme Name: WP UIkit Starter
 Theme URI: https://github.com/nstaeger/wp-uikit-starter
 Author: Nicolai Stäger
 Author URI: http://www.nstaeger.de/
@@ -8,7 +8,7 @@ Version: 0.9
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: light, gray, uikit, starter, theme, developer, grid, responsive-layout, fluid-layout, offcanvas, sidebar
-Text Domain: twentytwelve
+Text Domain: wp-uikit-starter
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
