--- a/less/uikit.less
+++ b/less/uikit.less
@@ -1,7 +1,7 @@
 // UIkit
 // ========================================================================
 
-@import "../../src/less/uikit.less";
+@import "../bower_components/uikit/less/uikit.less";
 
 
 // Theme
@@ -53,7 +53,7 @@
 @import "wordpress-layer.less";
 
 // Additional styling
-@import "sidebar.less";
+@import "nst-sidebar";
 
 // Need to be loaded last
 @import "text.less";
