Styling for comment-form
Started, not finished yet.

--- a/less/wordpress-layer.less
+++ b/less/wordpress-layer.less
@@ -1,5 +1,5 @@
 /**
- * Contains all stlying for code, that cannot be modified and needs uikit-styling
+ * Contains all stlying for code, that cannot be modified and needs UIkit-styling
  * E.g.: widgets
  */
 
@@ -15,4 +15,9 @@
             .uk-button;
         }
     }
+}
+
+.comment-form {
+    &:extend(.uk-form all);
+    &:extend(.uk-form-horizontal all);
 }
