Update description, added screenshot

--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ Theme Name: WP UIkit Starter
 Theme URI: https://github.com/nstaeger/wp-uikit-starter
 Author: Nicolai Stäger
 Author URI: http://www.nstaeger.de/
-Description: This is a starter-theme for developers, using the frontend-framework UIkit.
+Description: This is a starter-theme for developers, using the frontend-framework UIkit. Features: full responsive theme, responsive two-level dropdown navigation with offcanvas-navigation for smaller devices, main sidebar on the right side and horizontal footer sidebar with autocolumns, support for featured image
 Version: 0.9
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: light, gray, uikit, starter, theme, developer, grid, responsive-layout, fluid-layout, offcanvas, sidebar
-Text Domain: wp-uikit-starter
+Text Domain: wordpress-uikit-starter-theme
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
