--- a/less/uikit.less
+++ b/less/uikit.less
@@ -3,6 +3,15 @@
 
 @import "../bower_components/uikit/less/uikit.less";
 
+// UIkit Components
+// ========================================================================
+
+@import "../bower_components/uikit/less/components/caption.less";
+@import "../bower_components/uikit/less/components/cover.less";
+@import "../bower_components/uikit/less/components/dotnav.less";
+@import "../bower_components/uikit/less/components/slidenav.less";
+@import "../bower_components/uikit/less/components/slideshow.less";
+
 
 // Theme
 // ========================================================================
