updated less structure

--- a/less/uikit-theme-default/caption.less
+++ b/less/uikit-theme-default/caption.less
@@ -1,26 +1,18 @@
 //
-// Component: Dotnav
+// Component: Caption
 //
-// ========================================================================
-
-
-// Variables
 // ========================================================================
 
 
 // Component
 // ========================================================================
 
-.hook-dotnav-item() {}
+.hook-caption() {}
 
-.hook-dotnav-item-hover() {}
-
-.hook-dotnav-item-onclick() {}
-
-.hook-dotnav-item-active() {}
+.hook-caption-panel() {}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-dotnav-misc() {}
+.hook-caption-misc() {}
