--- a/less/uikit-theme-default/dotnav.less
+++ b/less/uikit-theme-default/dotnav.less
@@ -1,5 +1,5 @@
 //
-// Component: Slidenav
+// Component: Dotnav
 //
 // ========================================================================
 
@@ -11,18 +11,24 @@
 // Component
 // ========================================================================
 
-.hook-slidenav() {}
+.hook-dotnav-item() {}
 
-.hook-slidenav-previous() {}
+.hook-dotnav-item-hover() {}
 
-.hook-slidenav-next() {}
+.hook-dotnav-item-onclick() {}
 
-.hook-slidenav-hover() {}
+.hook-dotnav-item-active() {}
 
-.hook-slidenav-active() {}
+.hook-dotnav-contrast-item() {}
+
+.hook-dotnav-contrast-item-hover() {}
+
+.hook-dotnav-contrast-item-onclick() {}
+
+.hook-dotnav-contrast-item-active() {}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-slidenav-misc() {}
+.hook-dotnav-misc() {}
