--- a/less/uikit-theme-default/slidenav.less
+++ b/less/uikit-theme-default/slidenav.less
@@ -1,5 +1,5 @@
 //
-// Component: Sortable
+// Component: Slidenav
 //
 // ========================================================================
 
@@ -7,26 +7,24 @@
 // Variables
 // ========================================================================
 
-@nestable-dragged-z-index:                      @global-z-index + 50;
-
 
 // Component
 // ========================================================================
 
-.hook-nestable-list-dragged() {}
+.hook-slidenav() {}
 
-.hook-nestable-item() {}
+.hook-slidenav-hover() {}
 
-.hook-nestable-placeholder() {}
+.hook-slidenav-active() {}
 
-.hook-nestable-empty() {}
+.hook-slidenav-contrast() {}
 
-.hook-nestable-handle() {}
+.hook-slidenav-contrast-hover() {}
 
-.hook-nestable-toggle() {}
+.hook-slidenav-contrast-active() {}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-nestable-misc() {}
+.hook-slidenav-misc() {}
