--- a/less/uikit-theme-default/uikit.less
+++ b/less/uikit-theme-default/uikit.less
@@ -1,16 +1,7 @@
 // UIkit
 // ========================================================================
 
-@import "../bower_components/uikit/less/uikit.less";
-
-// UIkit Components
-// ========================================================================
-
-@import "../bower_components/uikit/less/components/caption.less";
-@import "../bower_components/uikit/less/components/cover.less";
-@import "../bower_components/uikit/less/components/dotnav.less";
-@import "../bower_components/uikit/less/components/slidenav.less";
-@import "../bower_components/uikit/less/components/slideshow.less";
+@import "../../src/less/uikit.less";
 
 
 // Theme
@@ -57,13 +48,6 @@
 @import "modal.less";
 @import "offcanvas.less";
 @import "tooltip.less";
-
-// Wordpress Layer
-@import "wordpress-layer.less";
-
-// Additional styling
-@import "nst-comments";
-@import "nst-sidebar";
 
 // Need to be loaded last
 @import "text.less";
