--- a/less/uikit-theme-default/uikit-customizer.less
+++ b/less/uikit-theme-default/uikit-customizer.less
@@ -3,50 +3,57 @@
 
 @import "uikit.less";
 
+// Layout
+@import "../../src/less/components/flex.less";
+@import "../../src/less/components/cover.less";
+
 // Navs
 @import "../../src/less/components/dotnav.less";
 @import "../../src/less/components/slidenav.less";
 
 // Common
+@import "../../src/less/components/caption.less";
 @import "../../src/less/components/form-advanced.less";
 @import "../../src/less/components/form-file.less";
 @import "../../src/less/components/form-password.less";
 @import "../../src/less/components/form-select.less";
 @import "../../src/less/components/placeholder.less";
 
+
 // JavaScript
+@import "../../src/less/components/accordion.less";
 @import "../../src/less/components/autocomplete.less";
 @import "../../src/less/components/datepicker.less";
 @import "../../src/less/components/htmleditor.less";
-@import "../../src/less/components/nestable.less";
+@import "../../src/less/components/slideshow.less";
 @import "../../src/less/components/notify.less";
 @import "../../src/less/components/search.less";
+@import "../../src/less/components/nestable.less";
 @import "../../src/less/components/sortable.less";
 @import "../../src/less/components/sticky.less";
 @import "../../src/less/components/upload.less";
-@import "../../src/less/components/flex.less";
-@import "../../src/less/components/cover.less";
 
 
 // Theme
 // ========================================================================
-
-// LESS related
-@import "variables.less";
 
 // Navs
 @import "dotnav.less";
 @import "slidenav.less";
 
 // Common
+@import "caption.less";
+@import "form-advanced.less";
 @import "form-password.less";
 @import "placeholder.less";
 
 // JavaScript
+@import "accordion.less";
 @import "autocomplete.less";
 @import "datepicker.less";
 @import "htmleditor.less";
-@import "nestable.less";
 @import "notify.less";
 @import "search.less";
+@import "nestable.less";
+@import "sortable.less";
 @import "sticky.less";
