--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: WP UIkit Starter
-Theme URI: https://github.com/nstaeger/wp-uikit-starter
+Theme Name: WordPress UIkit Starter Theme
+Theme URI: http://github.com/nstaeger/WordPress-UIkit-Starter-Theme
 Author: Nicolai Stäger
 Author URI: http://www.nstaeger.de/
-Description: This is a starter-theme for developers, using the frontend-framework UIkit. Features: full responsive theme, responsive two-level dropdown navigation with offcanvas-navigation for smaller devices, main sidebar on the right side and horizontal footer sidebar with autocolumns, support for featured image
+Description: This is a starter-theme for developers, using the frontend-framework UIkit. Features: full responsive theme, responsive two-level dropdown navigation with offcanvas-navigation for smaller devices, main sidebar on the right side and horizontal footer sidebar, support for featured image, gallery-tag support with UIkit slideshow and gallery
 Version: 0.9
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: light, gray, uikit, starter, theme, developer, grid, responsive-layout, fluid-layout, offcanvas, sidebar
+Tags: light, gray, white, uikit, starter, theme, developer, grid, two-columns, responsive-layout, fluid-layout, offcanvas, sidebar, featured-images
 Text Domain: wordpress-uikit-starter-theme
 
 This theme, like WordPress, is licensed under the GPL.
